--- a/SampleWebApplication/Views/Home/Index.cshtml
+++ b/SampleWebApplication/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             </a>            
         </div>
         <div class="content-body">
-            <div class="success-text">Success!</div>
+            <div class="success-text">SynnexB2BTest</div>
             <div class="description line-1"> SynnexB2B Azure DevOps project has been setup successfully.</div>
             <div class="description line-2"> The application is now running successfully.</div>
         </div>
