--- a/SampleWebApplication/Views/Home/Index.cshtml
+++ b/SampleWebApplication/Views/Home/Index.cshtml
@@ -16,6 +16,7 @@
             <div class="success-text">SynnexB2BTest</div>
             <div class="description line-1"> SynnexB2B Azure DevOps project has been setup successfully.</div>
             <div class="description line-2"> The application is now running successfully.</div>
+            <div class="description line-2"> Version 2.0</div>
         </div>
     </div>
 </div>
